# solar-monitor

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  justfile
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
api/: Cargo.toml
api/src/: lib.rs
api/tests/: integration.rs
contracts/: Cargo.toml  README.md  build.rs
contracts/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
docs/: API_DESIGN.md  CORE_ENGINE.md  DATA_STORAGE.md  DEPLOYMENT.md  EG4_IMPLEMENTATION_BRIDGE.md  IMPLEMENTATION_BREAKDOWN.md  PERFORMANCE.md  PLUGIN_SYSTEM.md  SECURITY.md  SETUP.md  SPECIFICATION.md
migrations/: 001_init.sql  002_notifications.sql  003_notification_log.sql  004_downsampling.sql
notify/: Cargo.toml
notify/src/: channels.rs  events.rs  lib.rs
notify/tests/: engine.rs
protocols/: Cargo.toml
protocols/src/: eg4_settings.rs  lib.rs
protocols/src/luxpower/: mod.rs  settings.rs
protocols/src/luxpower/models/: eg4_6000xp.rs  mod.rs
protocols/src/transport/: mod.rs  modbus_rtu.rs  ports.rs
scripts/: deploy.sh
storage/: Cargo.toml
storage/src/: lib.rs
storage/tests/: integration.rs
types/ts/: index.ts
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
web/src/: dashboard.tsx  device-select.tsx  index.css  layout.tsx  main.tsx  notifications.tsx  settings.tsx
