[package]
name = "solar-monitor-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "solar_monitor_api"
path = "src/lib.rs"

[dependencies]
solar-monitor-core = { path = "../core" }
contracts = { path = "../contracts" }
solar-monitor-protocols = { path = "../protocols" }
solar-monitor-storage = { path = "../storage" }
axum = { version = "0.8", default-features = false, features = [
    "macros",
    "ws",
    "json",
    "query",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
serialport = { version = "4.4", default-features = false }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["fs"] }
mime_guess = "2.0"
sysinfo = { version = "0.37" }

[features]
embed-frontend = ["rust-embed"]
openapi = []

[dependencies.rust-embed]
optional = true
version = "8"

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
tempfile = "3"
async-trait = "0.1"
