[package]
name = "solar-monitor-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "solar_monitor_core"
path = "src/lib.rs"

[dependencies]
contracts = { path = "../contracts" }
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
