[package]
name = "solar-monitor-core"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
name = "solar_monitor_core"
path = "src/lib.rs"

[dependencies]
contracts = { path = "../contracts" }
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
