[package]
name = "solar-monitor-notify"
version = "0.3.0"
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
name = "solar_monitor_notify"
path = "src/lib.rs"

[dependencies]
contracts = { path = "../contracts" }
solar-monitor-storage = { path = "../storage" }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt", "time", "sync", "macros"] }
tracing = "0.1"
# rustls everywhere: native-tls/openssl breaks aarch64 + FreeBSD cross-builds
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1", "tokio1-rustls-tls", "builder", "hostname"] }
