[package]
name = "solar-monitor-protocols"
version = "0.1.0"
edition = "2021"

[lib]
name = "solar_monitor_protocols"
path = "src/lib.rs"

[dependencies]
solar-monitor-core = { path = "../core" }
anyhow = "1.0"
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1.37", features = ["time", "io-util"] }
tokio-serial = "5.4"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio-modbus = { version = "0.16", features = ["rtu"] }
once_cell = "1"
contracts = { path = "../contracts" }
