[package]
name = "solar-monitor-protocols"
version = "0.4.0"
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
name = "solar_monitor_protocols"
path = "src/lib.rs"

[dependencies]
solar-monitor-core = { path = "../core" }
anyhow = "1.0"
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1.37", features = ["rt", "time", "io-util", "macros"] }
tokio-serial = "5.4"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio-modbus = { version = "0.16", features = ["rtu"] }
once_cell = "1"
contracts = { path = "../contracts" }
