[package]
name = "solar-monitor-storage"
version = "0.4.3"
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
name = "solar_monitor_storage"
path = "src/lib.rs"

[dependencies]
solar-monitor-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
contracts = { path = "../contracts" }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time"] }
